--- a/generators/app/templates/views/_index.ejs
+++ b/generators/app/templates/views/_index.ejs
@@ -5,6 +5,7 @@
 </head>
 <body>
   <h1>YO</h1>
-  <p>This is the landing page for <%= appName %>.</p>
+  <p>This is the landing page for the <b><%= appName %></b> project.</p>
+  <img src="http://placekitten.com/g/200/300" alt="kitten">
 </body>
 </html>
