--- a/generators/app/templates/views/_index.ejs
+++ b/generators/app/templates/views/_index.ejs
@@ -6,6 +6,6 @@
 <body>
   <h1>YO</h1>
   <p>This is the landing page for the <b><%= appName %></b> project.</p>
-  <img src="http://placecorgi.com//200/300" alt="yes, this is dog">
+  <img src="http://placecorgi.com/200/300" alt="yes, this is dog">
 </body>
 </html>
